--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -1,5 +1,5 @@
 <app-img *ngIf="product.images.length > 0" [img]="product.images[0]"></app-img>
 <h2>{{ product.price | currency:'COP' }}</h2>
 <p>{{ product.title }}</p>
-<button (click)="onShowDetail()">Ver detalle</button>
-<button (click)="onAddToCart()">Add cart</button>
+<button (click)="onShowDetail()" class="btn btn-primary">Ver detalle</button>
+<button (click)="onAddToCart()" class="btn btn-success" >Add cart</button>
