--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -1,4 +1,5 @@
-<button (click)="createNewProduct()" class="btn btn-primary" style="margin: 10px;">Create new Product</button>
+<button (click)="createNewProduct()" class="btn btn-primary" style="margin: 10px;">Crear nuevo producto</button>
+<button (click)="onShowDetail('242354435')" > Detalle no encontrado</button>
 <div class="products--grid">
   <app-product
     [product]="product"
@@ -6,11 +7,11 @@
     (addedProduct)="onAddToShoppingCart($event)"
     (showProduct)="onShowDetail($event)"
   ></app-product>
-  <button (click)="loadMore()" class="btn btn-secondary">Load Mora</button>
+  <button (click)="loadMore()" class="btn btn-secondary"> Cargar mas</button>
 </div>
 <div class="product-detail" [class.active]="showProductDetail">
   <div *ngIf="productChosen">
-    <button (click)="toggleProductoDetail()" class="btn btn-secondary">close</button>
+    <button (click)="toggleProductoDetail()" class="btn btn-secondary">Cerrar</button>
     <h1> {{ productChosen.title }} </h1>
     <p> {{productChosen.description}} </p>
     <button (click)="updateProduct()" class="btn btn-warning">Editar </button>
